#1 :bug: cheat div z-index 수정

--- a/catchcatch/source/CSS/UI/stagepage.css
+++ b/catchcatch/source/CSS/UI/stagepage.css
@@ -13,6 +13,7 @@
   background-size: contain;
   border: none;
   position: relative;
+  z-index: 3;
   /* border: 2px solid red; */
   /* border: 6px solid blue; */
 }
@@ -106,6 +107,7 @@
   height: 30px;
   left: 8px;
   top: 8px;
+  z-index: 3;
 }
 .BackIcon:active {
   background: url("../../../public/images/ui/backiconclick.png");
